--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "generate-sitemap": "node ./sitemap-generator.cjs",
     "preview": "vite preview"
   },
   "dependencies": {
