--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,15 @@
 # BEGIN React app client-side routing rules
 Options -MultiViews
 RewriteEngine On
-RewriteBase /
 
-# If the requested path is not a file or directory, route to index.html
-RewriteCond %{REQUEST_FILENAME} !-f
+# Redirect Trailing Slashes If Not A Folder...
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ index.html [QSA,L]
+RewriteCond %{REQUEST_URI} (.+)/$
+RewriteRule ^ %1 [L,R=301]
+
+# Handle Front Controller...
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule . /index.html [L]
 
 # END React app client-side routing rules
